<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/time" />

            <TextView
                android:id="@+id/textview3"
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/weather" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/subject" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="136dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="62dp"
                android:layout_height="37dp"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:text="费曼情况:"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="334dp"
                android:layout_height="56dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.515"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <CheckBox
                    android:id="@+id/radioButton25"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/brain_remind"

                    android:textSize="10sp" />

                <CheckBox
                    android:id="@+id/radioButton26"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/speak_remind"
                    android:textSize="12sp" />

                <CheckBox
                    android:id="@+id/radioButton27"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/re_think"
                    android:textSize="10sp" />
            </RadioGroup>

            <EditText
                android:id="@+id/fansi_neirong"
                android:layout_width="357dp"
                android:layout_height="66dp"
                android:background="@null"
                android:hint="@string/feiman_text"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.692"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup"
                app:layout_constraintVertical_bias="0.051" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="245dp">

            <EditText
                android:id="@+id/jianhua_neirong"
                android:layout_width="157dp"
                android:layout_height="132dp"
                android:background="@null"
                android:gravity="top"
                android:hint="@string/reduce"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.07"
                app:layout_constraintStart_toEndOf="@+id/textView8"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.192" />

            <EditText
                android:id="@+id/sikao_neirong"
                android:layout_width="292dp"
                android:layout_height="48dp"
                android:background="@null"
                android:gravity="top"
                android:hint="@string/refelect"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.803"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/jianhua_neirong"
                app:layout_constraintVertical_bias="0.272" />

            <EditText
                android:id="@+id/jilu_neirong"
                android:layout_width="125dp"
                android:layout_height="132dp"
                android:background="@null"
                android:gravity="top"
                android:hint="@string/record"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.515"
                app:layout_constraintStart_toEndOf="@+id/jianhua_neirong"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.192" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="78dp"
                android:layout_height="34dp"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:text="@string/kangnaier"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.075" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="205dp">

            <EditText
                android:id="@+id/lianxiang_neirong"
                android:layout_width="370dp"
                android:layout_height="165dp"
                android:background="@null"
                android:gravity="top"
                android:hint="@string/lianxiang_text"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.589"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.975" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="78dp"
                android:layout_height="34dp"
                android:gravity="center"
                android:text="@string/lianxiang"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.048"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.08" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aibinhaosi"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBox_day_1"
                    android:layout_width="65dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingLeft="-15px"
                    android:text="@string/first_review_day"
                    android:textSize="11sp" />

                <CheckBox
                    android:id="@+id/checkBox_day_3"
                    android:layout_width="72dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"

                    android:text="@string/third_review_day"
                    android:textSize="11sp" />

                <CheckBox
                    android:id="@+id/checkBox_day_7"
                    android:layout_width="65dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/seventh_review_day"

                    android:textSize="11sp" />

                <CheckBox
                    android:id="@+id/checkBox_day_14"
                    android:layout_width="65dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/forteenth_review_day"
                    android:textSize="11sp" />

                <CheckBox
                    android:id="@+id/checkBox_day_21"
                    android:layout_width="65dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/twenty_first_review_day"
                    android:textSize="11sp" />

                <CheckBox
                    android:id="@+id/checkBox_day_30"
                    android:layout_width="65dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/thirty_review_day"
                    android:textSize="10sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/zuihou" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>